real html excercise change before lunch

--- a/github.html
+++ b/github.html
@@ -2,9 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Codeup Page</title>
+    <style>
+        #Top {
+            background-color: black;
+            color: gainsboro;
+        }
+    </style>
 </head>
 <body>
-
+    <div id="Top">
+        <p><img src="img/first.svg" alt="first">
+        Pull requests Issues Marketplace Explore</p>
+    </div>
+    <div>
+        <p><img src="img/first.svg" alt="second"><h2>Codeupt</h2></p>
+    </div>
 </body>
 </html>
