--- a/practice.html
+++ b/practice.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Practice</title>
 </head>
 <body>
-
+    <h1>First day of class!</h1>
+    <p>Practice exercises will live here.</p>
+    <!--Here is comment-->
 </body>
 </html>
