Finishing touches on html exercises

--- a/github.html
+++ b/github.html
@@ -8,15 +8,56 @@
             background-color: black;
             color: gainsboro;
         }
+        .links {
+            color: mediumpurple;
+        }
+        #floating {
+            float: right;
+            color: mediumpurple;
+            margin-top: 0px;
+        }
+
     </style>
 </head>
 <body>
     <div id="Top">
-        <p><img src="img/first.svg" alt="first">
-        Pull requests Issues Marketplace Explore</p>
+        <p><img src="img/30x30.svg" alt="30">
+        Pull requests &nbsp;&nbsp  Issues &nbsp;&nbsp  Marketplace &nbsp;&nbsp  Explore</p>
     </div>
     <div>
-        <p><img src="img/first.svg" alt="second"><h2>Codeupt</h2></p>
+        <p><img src="img/30x30.svg" alt="30"><strong>  Codeup</strong></p>
     </div>
+    <nav>Repositories 39 &nbsp;&nbsp  People 15 &nbsp;&nbsp  Teams 7 &nbsp;&nbsp  Projects 0 &nbsp;&nbsp  Settings </nav>
+    <br>
+    <table>
+        <tr>
+            <th><strong>Codeup's dev team</strong></th>
+        </tr>
+        <tr>
+            <td><img src="img/48x48.svg" alt ="30"></td>
+            <td><strong class="links">Kent Beck</strong><br>KentBeck</td>
+            <td>Member</td>
+            <td>1 Team</td>
+        </tr>
+        <tr>
+            <td><img src="img/48x48.svg" alt ="30"></td>
+            <td><strong class="links">Codeup Instruction Staff</strong><br>CodeupInstructors</td>
+            <td>Member</td>
+            <td>1 Team</td>
+        </tr>
+        <tr>
+            <td><img src="img/48x48.svg" alt ="30"></td>
+            <td><strong class="links">Martin Fowler</strong></td>
+            <td>Member</td>
+            <td>0 Teams</td>
+        </tr>
+    </table>
+    <br>
+    <hr>
+    <span>
+        <em id="copyright">C 2018 Github, Inc</em>
+        <span class="links">&nbsp;&nbsp Terms &nbsp;&nbsp Privacy &nbsp;&nbsp Security &nbsp;&nbsp Status &nbsp;&nbsp Help</span>
+        <p id="floating" align="right">Contact GitHub &nbsp;&nbsp API &nbsp;&nbsp Training &nbsp;&nbsp Shop &nbsp;&nbsp Blog &nbsp;&nbsp About</p>
+    </span>
 </body>
 </html>
