--- a/github.html
+++ b/github.html
@@ -31,7 +31,7 @@
     <br>
     <table>
         <tr>
-            <th><strong>Codeup's dev team</strong></th>
+            <th><Codeup's dev team</th>
         </tr>
         <tr>
             <td><img src="img/48x48.svg" alt ="30"></td>
