starting on forms exercise

--- a/forms.html
+++ b/forms.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Register With Us</title>
 </head>
 <body>
+    <form method="POST" action="http://request-inspector.glitch.me/">
+        <label for="email">Email</label>
+        <input type="text" name="email" id="email" placeholder="<Input email here>">
+
+    </form>
 
 </body>
 </html>
