2nd html bonus exercise complete

--- a/residential-lease.html
+++ b/residential-lease.html
@@ -47,9 +47,166 @@
         <label for="applicant">Applicant's name (first, middle, last)</label>
         <input id="applicant" type="text" name="applicant"><br>
         <span>&nbsp;&nbsp;&nbsp;&nbsp Is there a co-applicant? </span>
-        <input id="isthereco" type="checkbox" name="isthereco" value="yes">
-        <label for="isthereco"> yes </label>
-        <input id=""
+        <input id="yesthereco" type="checkbox" name="isthereco" value="yes">
+        <label for="yesthereco"> yes </label>
+        <input id="noco" type="checkbox" name="noco" value="no">
+        <label for="noco"> no &nbsp;&nbsp;&nbsp <strong> If yes, co-applicant must submit a separate application</strong></label><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp</span>
+        <label for="formername">Applicant's former last name (maiden or married) </label>
+        <input id="formername" type="text" name="formername"><br>
+        <label for="applicantemail">E-mail </label>
+        <input id="applicantemail" type="text" name="applicantemail">
+        <label for="apphomephone">Home Phone </label>
+        <input id="apphomephone" type="text" name="apphomephone"><br>
+        <label for="appworkphone">Work Phone </label>
+        <input id="appworkphone" type="text" name="appworkphone">
+        <label for="appmobilepager">Mobile/Pager </label>
+        <input id="appmobilepager" type="text" name="appworkphone"><br>
+        <label for="appssn">Soc. Sec. No. </label>
+        <input id="appssn" type="text" name="appssn">
+        <label for="appdl">Driver's License No. </label>
+        <input id="appdl" type="text" name="appdl">
+        <span> in </span>
+        <input id="appstatedl" type="text" name="appstatedl">
+        <label for="appstatedl">(state(</label><br>
+        <label for="appdob">Date of Birth </label>
+        <input id="appdob" type="text" name="appdob">
+        <label for="appheight">Height </label>
+        <input id="appheight" type="text" name="appheight">
+        <label for="appweight">Weight </label>
+        <input id="appweight" type="text" name="appweight">
+        <label for="appeye">Eye Color</label>
+        <input id="appeye" type="text" name="appeye"><br>
+        <label for="apphair"> Hair Color</label>
+        <input id="apphair" type="text" name="apphair">
+        <label for="appmarital">Marital Status </label>
+        <input id="appmarital" type="text" name="appmarital">
+        <label for="appcitizen">Citizenship </label>
+        <input id="appcitizen" type="text" name="appcitizen">
+        <span>(country)</span><br><br>
+        <span>Emergency Contact: </span>
+        <label for="emergencyname">Name: </label>
+        <input id="emergencyname" type="text" name="emergencyname"><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <label for="emergencyadd">Address: </label>
+        <input id="emergencyadd" type="text" name="emergencyadd"><br>
+        <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+        <label for="emergencyphone">Phone: </label>
+        <input id="emergencyphone" type="text" name="emergencyphone">
+        <label for="emergencyemail">E-mail: </label>
+        <input id="emergencyemail" type="text" name="emergencyemail"><br><br>
+        <p>Name all other persons who will occupy the Property:</p>
+        <label for="occupy1name">Name: </label>
+        <input id="occupy1name" type="text" name="occupy1name">
+        <label for="occupy1rel">Relationship </label>
+        <input id="occupy1rel" type="text" name="occupy1rel">
+        <label for="occupy1age">Age: </label>
+        <input id="occupy1age" type="text" name="occupy1age"><br>
+        <label for="occupy2name">Name: </label>
+        <input id="occupy2name" type="text" name="occupy2name">
+        <label for="occupy2rel">Relationship </label>
+        <input id="occupy2rel" type="text" name="occupy2rel">
+        <label for="occupy2age">Age: </label>
+        <input id="occupy2age" type="text" name="occupy2age"><br>
+        <label for="occupy3name">Name: </label>
+        <input id="occupy3name" type="text" name="occupy3name">
+        <label for="occupy3rel">Relationship </label>
+        <input id="occupy3rel" type="text" name="occupy3rel">
+        <label for="occupy3age">Age: </label>
+        <input id="occupy3age" type="text" name="occupy3age"><br>
+        <label for="occupy4name">Name: </label>
+        <input id="occupy4name" type="text" name="occupy4name">
+        <label for="occupy4rel">Relationship </label>
+        <input id="occupy4rel" type="text" name="occupy4rel">
+        <label for="occupy4age">Age: </label>
+        <input id="occupy4age" type="text" name="occupy4age"><br><br>
+        <label for="appcurrentadd">Applicant's Current Address: </label>
+        <input id="appcurrentadd" type="textarea" name="appcurrentadd">
+        <label for="appcurrentaptno">Apt No. </label>
+        <input id="appcurrentaptno" type="text" name="appcurrentaptno"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appcurrentlandlord">Landlord's Name: </label>
+        <input id="appcurrentlandlord" type="text" name="appcurrentlandlord">
+        <label for="appcurrentlordmail">Email: </label>
+        <input id="appcurrentlordmail" type="text" name="appcurrentlordmail"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appcurrentphoneday">Phone:<em>Day: </em></label>
+        <input id="appcurrentphoneday" type="text" name="appcurrentphoneday">
+        <label for="appcurrentphonenight"><em>Nt:</em></label>
+        <input id="appcurrentphonenight" type="text" name="appcurrentphonenight">
+        <label for="appcurrentphonemobile"><em>Mb: </em></label>
+        <input id="appcurrentphonemobile" type="text" name="appcurrentphonemobile">
+        <label for="appcurrentphonefax">Fax: </label>
+        <input id="appcurrentphonefax" type="text" name="appcurrentphonefax"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appcurrentmovein">Date Moved-In </label>
+        <input id="appcurrentmovein" type="text" name="appcurrentmovein">
+        <label for="appcurrentmoveout">Date Moved-Out </label>
+        <input id="appcurrentmoveout" type="text" name="appcurrentmoveout">
+        <label for="appcurrentrent">Rent $</label>
+        <input id="appcurrentrent" type="text" name="appcurrentrent"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appcurrentreason">Reason for move: </label>
+        <input id="appcurrentreason" type="text" name="appcurrentreason"><br><br>
+
+        <label for="appprevadd">Applicant's Previous Address: </label>
+        <input id="appprevadd" type="textarea" name="appprevadd">
+        <label for="appprevaptno">Apt No. </label>
+        <input id="appprevaptno" type="text" name="appprevaptno"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appprevlandlord">Landlord's Name: </label>
+        <input id="appprevlandlord" type="text" name="appprevlandlord">
+        <label for="appprevlordmail">Email: </label>
+        <input id="appprevlordmail" type="text" name="appprevlordmail"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appprevphoneday">Phone:<em>Day: </em></label>
+        <input id="appprevphoneday" type="text" name="appprevphoneday">
+        <label for="appprevphonenight"><em>Nt:</em></label>
+        <input id="appprevphonenight" type="text" name="appprevphonenight">
+        <label for="appprevphonemobile"><em>Mb: </em></label>
+        <input id="appprevphonemobile" type="text" name="appprevphonemobile">
+        <label for="appprevphonefax">Fax: </label>
+        <input id="appprevphonefax" type="text" name="appprevphonefax"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appprevmovein">Date Moved-In </label>
+        <input id="appprevmovein" type="text" name="appprevmovein">
+        <label for="appprevmoveout">Date Moved-Out </label>
+        <input id="appprevmoveout" type="text" name="appprevmoveout">
+        <label for="appprevrent">Rent $</label>
+        <input id="appprevrent" type="text" name="appprevrent"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appprevreason">Reason for move: </label>
+        <input id="appprevreason" type="text" name="appprevreason"><br><br>
+
+        <label for="appemployer">Applicant's Current Employer: </label>
+        <input id="appemployer" type="text" name="appemployer"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="appemployeradd">Address: </label>
+        <input id="appemployeradd" type="text" name="appemployeradd">
+        <span><em>(street,city,state,zip)</em></span><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="supervisorname">Supervisor's Name: </label>
+        <input id="supervisorname" type="text" name="appemployerlordmail">
+        <label for="supervisorphone">Phone: </label>
+        <input id="supervisorphone" type="text" name="supervisorphone">
+        <label for="supervisorfax">Fax: </label>
+        <input id="supervisorfax" type="text" name="supervisorfax"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="employeremail">Email: </label>
+        <input id="employeremail" type="text" name="employeremail"><br>
+        <span>&nbsp;&nbsp</span>
+        <label for="employerstart">Start Date: </label>
+        <input id="employerstart" type="text" name="employerstart">
+        <label for="employergross">Gross Monthly Income: $</label>
+        <input id="employergross" type="text" name="employergross">
+        <label for="employerposition">Position: </label>
+        <input id="employerposition" type="text" name="employerposition"><br><br>
+
+        <div>
+            (TAR-2003) 10-16-07
+            <div align="right">Page 1 of 4</div>
+        </div>
+
 
 
 
