--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -12,6 +12,15 @@
             return sum;
         }
         console.log(addValues(2,3));
+
+        function areaTriangle(num1, num2, num3) {
+            var perimeter = num1 + num2 + num3;
+            var p = perimeter / 2;
+            var area = Math.sqrt(p * (p-num1) * (p - num2) * (p-num3));
+            return area;
+        }
+
+        console.log(areaTriangle(5, 6, 7));
     </script>
 </body>
 </html>
