--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -16,7 +16,7 @@
         function areaTriangle(num1, num2, num3) {
             var perimeter = num1 + num2 + num3;
             var p = perimeter / 2;
-            var area = Math.sqrt(p * (p-num1) * (p - num2) * (p-num3));
+            var area = Math.sqrt(p * (p - num1) * (p - num2) * (p - gnum3));
             return area;
         }
 
