--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -7,12 +7,14 @@
 <body>
     <h1>Morning Warmups</h1>
     <script>
+        // function to add two numbers
         function addValues(num1, num2) {
             var sum = num1 + num2;
             return sum;
         }
         console.log(addValues(2,3));
 
+        // function to calculate area of triangle by taking 3 sides as parameters
         function areaTriangle(num1, num2, num3) {
             var perimeter = num1 + num2 + num3;
             var p = perimeter / 2;
