adjustments to styling

--- a/welcome.html
+++ b/welcome.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <title>Welcome</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Pathway+Gothic+One|Prompt&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1 id="Top" class="fancy-header";>Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamics, <strong>we </strong>solve <em>your </em>problems with <strong><em>technology.</em></strong></p>
+    <nav class="top-nav">
+        <ul class="nav">
+            <li class="nav-item"><a class="nav-link" href="#Top">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#Middle">Vision</a></li>
+            <li class="nav-item"><a class="nav-link" href="#Bottom">Products</a></li>
+            <li class="nav-item"><h1 id="Top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
+        </ul>
+    </nav>
+    <br><br><br><br>
+    <h2 id="motto">At Veridian Dynamics, <strong>we </strong>solve <em>your </em>problems with <strong><em>TECHNOLOGY.</em></strong></h2>
     <hr>
     <h2>Core Values</h2>
     <ul>
@@ -28,7 +37,7 @@
         <li>Increase Business by 30%</li>
     </ul>
     <hr>
-    <h2>Company Vision</h2>
+    <h2 id="Middle">Company Vision</h2>
     <div>
         <img src="img/birds.jpeg" alt="birds" style="width:500px;height:400px;">
         <img src="img/city.jpeg" alt="city" style="width:500px;height:300px;">
@@ -37,7 +46,7 @@
         <img src="img/purple.jpeg" alt="purple" style="width:500px;height:400px;">
         <img src="img/dog.jpeg" alt="dog" style="width:500px;height:400px;">
     </div>
-    <h2>Our Product</h2>
+    <h2 id="Bottom">Our Product</h2>
     <table>
         <tr>
             <th>Plan</th>
@@ -50,12 +59,12 @@
             <td>Base Technology</td>
         </tr>
         <tr>
-            <td>Advanced</td>
+            <td class="better"><em>Advanced</em></td>
             <td>$199</td>
             <td>Additional Features</td>
         </tr>
         <tr>
-            <td>Premium</td>
+            <td class="best"><em><strong>Premium</strong></em></td>
             <td>$499</td>
             <td>Unlimited Support</td>
         </tr>
