more small adjustments

--- a/welcome.html
+++ b/welcome.html
@@ -12,11 +12,11 @@
             <li class="nav-item"><a class="nav-link" href="#Top">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#Middle">Vision</a></li>
             <li class="nav-item"><a class="nav-link" href="#Bottom">Products</a></li>
-            <li class="nav-item"><h1 id="Top" class="fancy-header">Welcome to Veridian Dynamics!</h1>
+            <li class="nav-item"><h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
         </ul>
     </nav>
     <br><br><br><br>
-    <h2 id="motto">At Veridian Dynamics, <strong>we </strong>solve <em>your </em>problems with <strong><em>TECHNOLOGY.</em></strong></h2>
+    <h2 id="Top">At Veridian Dynamics, <strong>we </strong>solve <em>your </em>problems with <strong><em>TECHNOLOGY.</em></strong></h2>
     <hr>
     <h2>Core Values</h2>
     <ul>
