--- a/welcome.html
+++ b/welcome.html
@@ -18,58 +18,64 @@
     <br><br><br><br>
     <h2 id="Top">At Veridian Dynamics, <strong>we </strong>solve <em>your </em>problems with <strong><em>TECHNOLOGY.</em></strong></h2>
     <hr>
-    <h2>Core Values</h2>
-    <ul>
-        <li>Competence</li>
-        <li>Involvement</li>
-        <li>Technology</li>
-    </ul>
-    <h2>Our Process</h2>
-    <ol>
-        <li>Plan</li>
-        <li>Evaluate</li>
-        <li>Implement</li>
-    </ol>
-    <h2>2020 Vision</h2>
-    <ul>
-        <li>Become #1 in Technology</li>
-        <li>Increase Success by 20%</li>
-        <li>Increase Business by 30%</li>
-    </ul>
+    <section id="first">
+        <h2>Core Values</h2>
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+        <h2>Our Process</h2>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+        <h2>2020 Vision</h2>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
+    </section>
     <hr>
-    <h2 id="Middle">Company Vision</h2>
-    <div>
-        <img src="img/birds.jpeg" alt="birds" style="width:500px;height:400px;">
-        <img src="img/city.jpeg" alt="city" style="width:500px;height:300px;">
-    </div>
-    <div>
-        <img src="img/purple.jpeg" alt="purple" style="width:500px;height:400px;">
-        <img src="img/dog.jpeg" alt="dog" style="width:500px;height:400px;">
-    </div>
-    <h2 id="Bottom">Our Product</h2>
-    <table>
-        <tr>
-            <th>Plan</th>
-            <th>Price</th>
-            <th>Feature</th>
-        </tr>
-        <tr>
-            <td>Starter</td>
-            <td>$99</td>
-            <td>Base Technology</td>
-        </tr>
-        <tr>
-            <td class="better"><em>Advanced</em></td>
-            <td>$199</td>
-            <td>Additional Features</td>
-        </tr>
-        <tr>
-            <td class="best"><em><strong>Premium</strong></em></td>
-            <td>$499</td>
-            <td>Unlimited Support</td>
-        </tr>
-    </table>
-    <p><em>All products come with our quality guarantee<sup>TM</sup>.</em></p>
-    <a href="#Top">Go to the top of the page.</a>
+    <section id="second">
+        <h2 id="Middle">Company Vision</h2>
+        <div>
+            <img src="img/birds.jpeg" alt="birds" style="width:500px;height:400px;">
+            <img src="img/city.jpeg" alt="city" style="width:500px;height:300px;">
+        </div>
+        <div>
+            <img src="img/purple.jpeg" alt="purple" style="width:500px;height:400px;">
+            <img src="img/dog.jpeg" alt="dog" style="width:500px;height:400px;">
+        </div>
+    </section>
+    <section id="third">
+        <h2 id="Bottom">Our Product</h2>
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Feature</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td class="better"><em>Advanced</em></td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td class="best"><em><strong>Premium</strong></em></td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
+        <p id="small"><em>All products come with our quality guarantee<sup>TM</sup>.</em></p>
+        <a href="#Top">Go to the top of the page.</a>
+    </section>
 </body>
 </html>
