--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -27,9 +27,18 @@
             return array[0];
         }
 
+        // function to return equilateral triangle area
+        function equilateralArea (num) {
+            return (Math.sqrt(3) / 4) * (num * num);
+        }
+
         console.log(areaTriangle(5, 6, 7));
         var theArray = [4,2,3];
         console.log(returnFirst(theArray));
+        console.log(areaTriangle(20, 20, 20));
+        console.log(equilateralArea(20));
+
+
     </script>
 </body>
 </html>
