--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -32,11 +32,17 @@
             return (Math.sqrt(3) / 4) * (num * num);
         }
 
+        //function that concatenates three strings together
+        function conStrings(string1, string2, string3){
+            return string1 + string2 + string3;
+        }
+
         console.log(areaTriangle(5, 6, 7));
         var theArray = [4,2,3];
         console.log(returnFirst(theArray));
         console.log(areaTriangle(20, 20, 20));
         console.log(equilateralArea(20));
+        console.log(conStrings("ab", "cd", "ef"));
 
 
     </script>
