--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,6 +24,10 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
+<button id="btn1">Header Change</button>
+<button id="btn2">Sub Header Color</button>
+<button id="btn3">List Color</button>
+<button id="btn4">Text Change</button>
 
 <script>
     (function() {
@@ -32,30 +36,43 @@
         var mainHeader = document.getElementById('main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        mainHeader.innerHTML = "JavaScript is Cool";
+        var headerChange = function(event){
+            mainHeader.innerHTML = "JavaScript is Cool";
+        };
+        document.getElementById("btn1").addEventListener('click', headerChange, false);
 
         // TODO: Uncomment the next line and get the sub header element by id
         var subHeader = document.getElementById('sub-header');
 
         // TODO: Set the text color of subHeader to blue
-        subHeader.style.color = "#0000FF";
+        var subBlue = function(event){
+            subHeader.style.color = "#0000FF";
+        };
+        document.getElementById("btn2").addEventListener('click', subBlue, false);
 
         // TODO: Uncomment the next line and get all list items
         var listItems = document.getElementsByTagName('li');
 
         // TODO: Set text color on every other list item to grey
-        for(var i = 0; i < listItems.length; i += 2){
-            listItems[i].style.color = "#808080";
-        }
+        var listChange = function(event){
+            for(var i = 0; i < listItems.length; i += 2){
+                listItems[i].style.color = "#808080";
+            }
+            dbidOne.style.color = "#0000FF";
+        };
+        document.getElementById("btn3").addEventListener('click', listChange, false);
+
         // TODO: Set text color of li with dbid = 1 to blue
         var dbidOne = document.getElementsByTagName('li')[0];
-        dbidOne.style.color = "#0000FF";
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName("sub-paragraph")[0];
 
         // TODO: Change the ext in the first sub paragraph to "Mission Accomplished!"
-        subParagraphs.innerText = "Mission Accomplished!";
+        var textChange = function(event){
+            subParagraphs.innerText = "Mission Accomplished!";
+        };
+        document.getElementById("btn4").addEventListener('click', textChange, false);
     })();
 </script>
 </body>
