--- a/ajax-blog.html
+++ b/ajax-blog.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ajax Blog</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 </head>
 <body>
-
+<div class="card" id="posts"></div>
+<button id="refreshList">Refresh</button>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script>
+    $('#refreshList').click(function(){
+        var fill = $.ajax("data/blog.json");
+        $('#posts').html("");
+        fill.done(function(data){
+            data.forEach(function(obj){
+                $('#posts').append("<div class='card-header mt-2'><h2>" + obj.title + "</h2></div>")
+                    .append("<div class='card-body'><em>" + obj.content + "</em>").append("<ul>");
+                obj.categories.forEach(function(category){
+                    $('#posts').append("<li>" + category + "</li>")
+                });
+                $('#posts').append("</ul></div>").append("<div class='card-footer'>" + obj.date + "</div>");
+            })
+        });
+    })
+</script>
 </body>
 </html>
