--- a/morning-warmups.html
+++ b/morning-warmups.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Morning Warmups</h1>
+    <script src="js/jquery-2.2.4.js"></script>
     <script src="js/morning-warmups.js"></script>
 </body>
 </html>
